--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.3.1",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
